--- a/2020-06-10-crypt.md
+++ b/2020-06-10-crypt.md
@@ -10,20 +10,38 @@ categories: Encryption, Compression. C, Bash
 
 ### Introduction
 
-You might think that encryption and compression are two different subjects  and you would be right. Nonetheless, there are certain  advantages to implementing them together, in a single package.
+One of the simplest and at the same time most secure forms of encryption is bitwise XOR [1] operation against a long symmetric key. 
 
-One of the simplest and at the same time most secure forms of encryption is bitwise XOR operation against a long symmetric key. With this method, the symmetry is perfect, meaning that exactly the same operation with the same key decrypts the encrypted text back to the original. 
-
-It is easy to even set up group super security. Imagine a committee working on some super secret dossier. Normally, any member can leak it. However, if every member cumulatively encrypts it with his own secret key and all the intermediate copies are deleted, then there is no way for any subset of the group to leak the original document. It can not be read by anyone until all the members come back  together, presumably at their next  meeting, and decrypt it, in any order, with all of their original keys. The same can be done with the public asymmetric keys but XOR is much simpler (each member needs only one key) and quicker. We should thrive not to complicate things too much.   
+This method is simple, secure and perfectly symmetrical: exactly the same operation with the same key decrypts the encrypted text back to its original form.  
   
-Furthermore, as long as you make the key random and of the same size 
+I have written a utility package [Token Crypt](https://github.com/liborty/TokenCrypt) 
+that allows convenient compression and encryption of whole directories using this method.
+
+You might think that encryption and compression are two different subjects  and you would be right. Nonetheless, there are certain practical advantages to implementing them together.
+
+
   
-Granted, relatively short public and private keys for asymmetric  encryption do have certain practical advantages. Most of all the ease of disseminating the public keys over the internet. A cynic might add: also the chances of cracking short private keys. 
+### XOR Encryption
 
-###  XOR Encryption
-
-
+XOR, read eXclusive OR, is applied bit-by-bit to its two operands. The corresponding output bit is set to 1 when the two input bits are different, else it is set to 0. The operands can be conceptually of any length, in this case entire files.
 
 
-___
-[Token Crypt](https://github.com/liborty/TokenCrypt)
+As long as the key is random, of the same size as the file being encrypted, and specific for just that one file, then this method is theoretically unbreakable. Any attacker would have to guess correctly and individually every bit of the key file, which is not any easier than guessing the entire original content of the encrypted file. Given that the key is cryptographically random, it is actually harder.
+
+Granted, relatively short public and private keys for asymmetric  encryption do have certain practical advantages. Most of all the ease of disseminating the public keys over the internet.
+
+However, there are many encryption applications, where you may not want anyone else encrypting and/or reading your data.
+For example, storing your private data files "on the cloud".
+
+### Collective Security
+
+It was A. Dumas and his musketeers who had the best idea about what a collective ought to be: "all for one and one for all". Let us transfer his model into modern encryption.
+
+Imagine a committee/group working on some super secret dossier. The problem is that  any member of the group might  leak it. 
+
+However, if every member cumulatively encrypts the dossier  with his own secret key and all the intermediate copies are deleted, then nobody has access until they have all decrypted it back again with their individual original keys. Every single member is secure in the knowledge that all the rest can not leak it without him. The same can be done with the public asymmetric keys but XOR is much simpler and quicker. Each member needs only one key. We should thrive not to complicate things too much.
+  
+Similarly, suppose that a group needs to collectively issue some command or authorisation. Obviously, no individual member can have knowledge of the exact from of the authorisation command, else such a member could issue it alone.  So the command has to be an encrypted secret which can be revealed only by being decrypted by all the individual members, as above.
+
+---
+[1] 
