--- a/2020-06-10-crypt.md
+++ b/2020-06-10-crypt.md
@@ -10,12 +10,12 @@ categories: Encryption, Compression. C, Bash
 
 ### Introduction
 
-One of the simplest and at the same time most secure forms of encryption is bitwise XOR [1] operation against a long symmetric key. 
+One of the simplest and at the same time most secure forms of encryption is bitwise XOR (exclusive or) operation against a long symmetric key. 
 
 This method is simple, secure and perfectly symmetrical: exactly the same operation with the same key decrypts the encrypted text back to its original form.  
   
 I have written a utility package [Token Crypt](https://github.com/liborty/TokenCrypt) 
-that allows convenient compression and encryption of whole directories using this method.
+that allows convenient compression and encryption of whole directories, using this method.
 
 You might think that encryption and compression are two different subjects  and you would be right. Nonetheless, there are certain practical advantages to implementing them together.
 
@@ -23,10 +23,10 @@ You might think that encryption and compression are two different subjects  and 
   
 ### XOR Encryption
 
-XOR, read eXclusive OR, is applied bit-by-bit to its two operands. The corresponding output bit is set to 1 when the two input bits are different, else it is set to 0. The operands can be conceptually of any length, in this case entire files.
+XOR is applied bit-by-bit to its two operands. The corresponding output bit is set to 1 when the two input bits are different, else it is set to 0. The operands can be conceptually of any length, in this case entire files.
 
 
-As long as the key is random, of the same size as the file being encrypted, and specific for just that one file, then this method is theoretically unbreakable. Any attacker would have to guess correctly and individually every bit of the key file, which is not any easier than guessing the entire original content of the encrypted file. Given that the key is cryptographically random, it is actually harder.
+As long as the key is random, of the same length as the file being encrypted, and specific for just that one file, then this method is theoretically unbreakable. Any attacker would have to guess correctly and individually every bit of the key file, which is not any easier than guessing the entire original content of the encrypted file. Given that the key is cryptographically random, it is actually even harder.
 
 Granted, relatively short public and private keys for asymmetric  encryption do have certain practical advantages. Most of all the ease of disseminating the public keys over the internet.
 
@@ -35,13 +35,20 @@ For example, storing your private data files "on the cloud".
 
 ### Collective Security
 
-It was A. Dumas and his musketeers who had the best idea about what a collective ought to be: "all for one and one for all". Let us transfer his model into modern encryption.
+It was A. Dumas and his musketeers who had the best idea about what a collective ought to be: "all for one and one for all". Let us transfer his model into the world of modern encryption.
 
 Imagine a committee/group working on some super secret dossier. The problem is that  any member of the group might  leak it. 
 
-However, if every member cumulatively encrypts the dossier  with his own secret key and all the intermediate copies are deleted, then nobody has access until they have all decrypted it back again with their individual original keys. Every single member is secure in the knowledge that all the rest can not leak it without him. The same can be done with the public asymmetric keys but XOR is much simpler and quicker. Each member needs only one key. We should thrive not to complicate things too much.
-  
-Similarly, suppose that a group needs to collectively issue some command or authorisation. Obviously, no individual member can have knowledge of the exact from of the authorisation command, else such a member could issue it alone.  So the command has to be an encrypted secret which can be revealed only by being decrypted by all the individual members, as above.
+However, if every member cumulatively encrypts the dossier  with his own secret key and all the intermediate copies are deleted, then nobody has access until they have all decrypted it back again with their individual original keys. Every single member is secure in the knowledge that all the rest can not leak it without his knowledge and permission. 
 
----
-[1] 
+The same can be done with the public asymmetric keys but XOR is much simpler and quicker. Each member needs only one key. We should thrive not to complicate things too much.
+  
+Similarly, suppose that a group needs to collectively issue some command or authorisation. Obviously, no individual member can have knowledge of the exact form of the (secret) authorisation command, else such a member could issue it alone.  So the command has to be an encrypted secret which can be revealed only by being decrypted by all the individual members, as above.  
+  
+There is an additional requirement now that the members should not even see the command at all before it is actually being issued. This can be accomplished by simply X-oring all their individual keys together and encrypting the secret with the resulting super key. It is then necessary to delete the merged super key immediately afterwards.
+
+Again, the secret can not be seen until decrypted by all the members individually, one after another, in any order.
+
+### E-Democracy
+
+(To be continued)
