--- a/2020-06-10-crypt.md
+++ b/2020-06-10-crypt.md
@@ -15,37 +15,39 @@ One of the simplest and at the same time most secure forms of encryption is bitw
 This method is simple, secure and perfectly symmetrical: exactly the same operation with the same key decrypts the encrypted text back to its original form.  
   
 I have written a utility package [Token Crypt](https://github.com/liborty/TokenCrypt) 
-that allows convenient compression and encryption of whole directories using this method. The method is well known but TokenCrypt makes it efficient and convenient to use.
+that allows convenient compression and encryption of whole directories using this method. The method is well known but TokenCrypt makes it efficient and convenient to use. It also adds recognition and effective compression of hexadecimal and base64files.
 
 You might think that encryption and compression are two different subjects  and you would be right. Nonetheless, there are certain practical advantages to implementing them together.
-
-
   
 ### XOR Encryption
 
-XOR is applied bit-by-bit to its two operands. The corresponding output bit is set to 1 when the two input bits are different, else it is set to 0. The operands can be conceptually of any length, in this case entire files.
+XOR is applied bit-by-bit to its two operands. The corresponding output bit is set to '1' when the two input bits are different, else it is set to ''0'. The operands can be conceptually of any length, in this case they are entire files.
 
 
-As long as the key is random, of the same length as the file being encrypted, and specific for just that one file, then this method is theoretically unbreakable. Any attacker would have to guess correctly and individually every bit of the key file, which is not any easier than guessing the entire original content of the encrypted file. Given that the key is cryptographically random, it is actually even harder.
+As long as the key is random, of the same length as the file being encrypted, and specific for just that one file, then this method is theoretically unbreakable. Any attacker would have to guess correctly every bit of the key file, which is not any easier than guessing the entire original content of the encrypted file. Given that the key is cryptographically random, it is actually even harder.
 
 Granted, relatively short public and private keys for asymmetric  encryption do have certain practical advantages. Most of all the ease of disseminating the public keys over the internet.
 
-However, there are many encryption applications, where you may not want anyone else encrypting and/or reading your data.
-For example, when storing your private data files "on the cloud". We shall now discuss some more interesting applications.
+However, there are many encryption applications, where we may not want anyone else encrypting and/or reading your data.
+For example, when storing our private data files "on the cloud". 
+
+We shall now discuss some more interesting applications.
 
 ### Collective Security
 
-It was A. Dumas and his musketeers who had the best idea about what a collective ought to be: "all for one and one for all". Let us apply his model to the world of modern encryption.
+It was A. Dumas and his musketeers who had the best idea about what a collective ought to be: "all for one and one for all". We apply his model where every individual counts to the world of modern encryption.
+
+In this regard XOR encryption has very useful property that it forms and abelian group, meaning that encryptions and decryptions with any number of different keys can be 'piled up' and the order of their application is immaterial to the result.
 
 Imagine a committee/group working on some super secret dossier. The problem is that  any member of the group might  leak it. 
 
-However, if every member cumulatively encrypts the dossier  with his own secret key and all the intermediate copies are deleted, then nobody has access until they have all decrypted it back again with their individual original keys. Every single member of the group is secure in the knowledge that nobody, not even all the rest of them, can leak it without his knowledge and permission. 
+However, if every member cumulatively encrypts the dossier  with his own secret key (and all the intermediate copies are deleted), then nobody has access until they have all decrypted it back again with their individual original keys. Every single member of the group is secure in the knowledge that nobody, not even all the rest of them, can leak it without his knowledge and permission. 
 
-The same can be done with the public asymmetric keys but XOR is much simpler to use. Each member needs only one key. We should thrive not to complicate things too much.
+Similar thing can be done with the public asymmetric keys but XOR is much simpler to use. Each member needs only one key. We should thrive not to complicate things too much.
   
-Similarly, suppose that a group needs to collectively issue some command or authorisation. Obviously, no individual member can have prior knowledge of the form of the (secret) authorisation command, else such a member could issue it alone.  So the command has to be an encrypted secret which can only ever be revealed by being decrypted collectively, by all the individual members' agreement, as above.  
+Now, suppose that a group needs to collectively issue some command or authorisation. Obviously, no individual member can have prior knowledge of the form of the (secret) authorisation command, else such a member could issue it alone.  So the command has to be an encrypted secret which can only ever be revealed by being decrypted collectively, by all the individual members' agreement, as above.  
   
-There is an additional requirement now. The members must  never see the command at all, before it is actually issued. This can be accomplished by X-oring all their individual keys together and encrypting the secret with the resulting super key. Of course, it is necessary to delete the merged super key immediately after its use.
+There is an additional requirement now. The members must  never see the command at all, before it is actually issued. This can be accomplished by X-oring all their individual keys together in advance and encrypting the secret with the resulting super key. Of course, it is necessary to delete the merged super key immediately after its use.
 
 ### E-Democracy
 
@@ -55,7 +57,7 @@ In order for electronic voting to be acceptable, it must fulfil  these criteria:
 
 	Voters can be verified by the election authorities in the usual way. On production of their identity documents and proof of citizenship, the authorities will simply confirm the voter's email address in the system as 'authorised'. The 'black box' system then mails them their anonymised  'verified voter' access key (API token). This token gives their local voting application  rights to enter their vote into the online e-voting system (running on the server). 
 	
-	One problem remains: if the officials themselves decide to create fictitious voters. However, discussing that would get us into deep issues of asymmetry of rights between the state and the individuals.
+	One problem remains if the officials themselves decide to create fictitious voters. However, discussing that would get us into deep issues of asymmetry of rights between the state and the individuals.
 
 1. Verifiability of the vote: the voter must be able to check that the vote is recorded as entered and as intended and change it if necessary.
 
@@ -63,15 +65,15 @@ In order for electronic voting to be acceptable, it must fulfil  these criteria:
 	
 1. Anonymity of voters: nobody else can connect a particular vote with a particular voter.
 
-	The 'verified voter' online access key is just a plain API token. It must not hold the voter's identity information. The votes held on the system are thus both anonymous and  encrypted. The staff verifying voter's identities do not have access to the access token generation process, so can not match the voters to their tokens.
+	The 'verified voter' online access key is just a plain API token. It must not hold the voter's identity information. The votes held on the system are thus both anonymous and  encrypted. The staff verifying voter's identities do not have access to the access token generation process, so they can not match the voters to their tokens.
 	
 1. security: nobody should be able to 'hack the system'. 
 
 	The votes remain on the server in their encrypted form until the voting deadline expires. At this stage the server switches to locked mode. The file(s) with the votes are collectively encrypted, protected 'read-only', and backed up. The server then requests that the voters forward their latest voting keys, it looks up their votes by their access keys and decrypts and counts the votes.    
 
-	The previous section outlined some ideas useful for being able to deploy election committees (scrutineers) within e-democracy. Essentially, the candidates and/or scrutineers all encrypt the raw vote files on the closing down of the election, thus satisfying themselves, that nobody else can tamper with them. This is equivalent to sealing the ballot boxes.
+	The previous section outlined some useful ideas  for deploying election committees (scrutineers) within e-democracy. Essentially, the candidates and/or scrutineers all encrypt the raw vote files on the closing down of the election, thus satisfying themselves, that nobody else can tamper with them. This is equivalent to sealing the ballot boxes.
 	  
-	  Of course, as always, the vulnerability of  an 'evil administrator' remains.  To this end all the system software must be open source. Secondly, the counting and the results can and should be verified by independent scrutineers, using their own software and working over the original sealed and encrypted files. One good thing about e-voting is that you can have plenty of recounts without any major inconvenience.
+	  Of course, as always, the vulnerability to an 'evil' administrator remains.  To this end all the system software must be open source. Secondly, the counting and the results can and should be verified by independent scrutineers, using their own software and working over the original sealed and encrypted files. One good thing about e-voting is that we can have plenty of recounts without any major inconvenience.
 	
 	
 
