--- a/2020-06-10-crypt.md
+++ b/2020-06-10-crypt.md
@@ -28,7 +28,7 @@ As long as the key is random, of the same length as the file being encrypted, an
 
 Granted, relatively short public and private keys for asymmetric  encryption do have certain practical advantages. Most of all the ease of disseminating the public keys over the internet.
 
-However, there are many encryption applications, where we may not want anyone else encrypting and/or reading your data.
+However, there are many encryption applications, where we may not want anyone else encrypting and/or reading our data.
 For example, when storing our private data files "on the cloud". 
 
 We shall now discuss some more interesting applications.
