--- a/2020-06-10-crypt.md
+++ b/2020-06-10-crypt.md
@@ -53,27 +53,35 @@ There is an additional requirement now. The members must  never see the command 
 
 In order for electronic voting to be acceptable, it must fulfil  these criteria: 
 
-1. Verifiability of the voter: only those entitled to vote can vote. 
+1. Verifiability of voters: only those entitled to vote can vote. 
 
 	Voters can be verified by the election authorities in the usual way. On production of their identity documents and proof of citizenship, the authorities will simply confirm the voter's email address in the system as 'authorised'. The 'black box' system then mails them their anonymised  'verified voter' access key (API token). This token gives their local voting application  rights to enter their vote into the online e-voting system (running on the server). 
 	
 	One problem remains if the officials themselves decide to create fictitious voters. However, discussing that would get us into deep issues of asymmetry of rights between the state and the individuals.
+	
+1. Anonymity of voters: nobody else can connect a particular vote with a particular voter.
+
+	The 'verified voter' online access key is just a plain API token. It must not hold the voter's identity information. The votes held on the system will be thus both anonymous and  encrypted. The staff verifying voter's identities do not have access to the access token generation process, so they can not match the voters to their tokens.
 
 1. Verifiability of the vote: the voter must be able to check that the vote is recorded as entered and as intended and change it if necessary.
 
 	The voter then generates his own 'voting' key on his own device, encrypts his vote with it and enters it, in the encrypted form, into the system. Using his access key and the voting key again, he can subsequently verify his own vote. He can change his vote by repeating the voting process.  This will all be handled transparently by a simple to use local app. It is important that the app does not send the voting encryption key anywhere but uses it only locally at this stage.
 	
-1. Anonymity of voters: nobody else can connect a particular vote with a particular voter.
+1. Security: nobody should be able to 'hack the system'. 
 
-	The 'verified voter' online access key is just a plain API token. It must not hold the voter's identity information. The votes held on the system are thus both anonymous and  encrypted. The staff verifying voter's identities do not have access to the access token generation process, so they can not match the voters to their tokens.
+	The votes remain on the server in their encrypted form until the voting deadline expires. At this stage the server switches to locked mode. The file(s) with the votes are collectively encrypted, protected 'read-only', and backed up. 
 	
-1. security: nobody should be able to 'hack the system'. 
+	Of course, as always, the vulnerability to an 'evil' programmer or administrator remains.  To this end all the system software must be open source.  
+	
+1. The counting of votes must be repeatable by independent scrutineers.
 
-	The votes remain on the server in their encrypted form until the voting deadline expires. At this stage the server switches to locked mode. The file(s) with the votes are collectively encrypted, protected 'read-only', and backed up. The server then requests that the voters forward their latest voting keys, it looks up their votes by their access keys and decrypts and counts the votes.    
+	The server then requests that the voters forward their latest voting keys, it looks up their votes by their access keys and decrypts and counts the votes.  
 
-	The previous section outlined some useful ideas  for deploying election committees (scrutineers) within e-democracy. Essentially, the candidates and/or scrutineers all encrypt the raw vote files on the closing down of the election, thus satisfying themselves, that nobody else can tamper with them. This is equivalent to sealing the ballot boxes.
+	The previous section outlined some useful ideas  for deploying election committees (scrutineers) within this e-democracy. The candidates and/or scrutineers all encrypt the raw vote file(s) when the election is closed, thus satisfying themselves, that nobody else can tamper with them. This is equivalent to sealing the ballot boxes.
 	  
-	  Of course, as always, the vulnerability to an 'evil' administrator remains.  To this end all the system software must be open source. Secondly, the counting and the results can and should be verified by independent scrutineers, using their own software and working over the original sealed and encrypted files. One good thing about e-voting is that we can have plenty of recounts without any major inconvenience.
+	  The counting itself and the results can now be verified by independent scrutineers, using their own software and working over the original sealed and encrypted files. 
+	  
+	  One good thing about e-voting is that we can have plenty of recounts without any major inconvenience.
 	
 	
 
