--- a/2020-06-10-crypt.md
+++ b/2020-06-10-crypt.md
@@ -65,21 +65,23 @@ In order for electronic voting to be acceptable, it must fulfil  these criteria:
 
 1. Verifiability of the vote: the voter must be able to check that the vote is recorded as entered and as intended and change it if necessary.
 
-	The voter then generates his own 'voting' key on his own device, encrypts his vote with it and enters it, in the encrypted form, into the system. Using his access key and the voting key again, he can subsequently verify his own vote. He can change his vote by repeating the voting process.  This will all be handled transparently by a simple to use local app. It is important that the app does not send the voting encryption key anywhere but uses it only locally at this stage.
+	The voter then generates his own 'voting' key on his own device, encrypts his vote with it and enters it into the online system. Using his access key and the voting key again, he can subsequently verify his own vote. He can change his vote by repeating the voting process.  This will all be handled transparently by a simple to use local app. It is important that the app does not send the voting encryption key anywhere but uses it only locally at this stage.
 	
 1. Security: nobody should be able to 'hack the system'. 
 
 	The votes remain on the server in their encrypted form until the voting deadline expires. At this stage the server switches to locked mode. The file(s) with the votes are collectively encrypted, protected 'read-only', and backed up. 
 	
-	Of course, as always, the vulnerability to an 'evil' programmer or administrator remains.  To this end all the system software must be open source.  
+	Of course, as always, the vulnerability to an 'evil' programmer or administrator remains.  To this end all the system software must be open source. 
+	
+	The server then requests that the voters forward their latest voting keys, it looks up their votes by their access keys and decrypts and counts the votes.  Their decryption keys can be sent now because the files are locked and can no longer be changed in any way. 
+	
+	If any unauthorised changing of votes took place prior to that, it will be picked up because the decryption with the original true key will no longer work. It is now acting as an  e-signature.
 	
 1. The counting of votes must be repeatable by independent scrutineers.
 
-	The server then requests that the voters forward their latest voting keys, it looks up their votes by their access keys and decrypts and counts the votes.  
-
-	The previous section outlined some useful ideas  for deploying election committees (scrutineers) within this e-democracy. The candidates and/or scrutineers all encrypt the raw vote file(s) when the election is closed, thus satisfying themselves, that nobody else can tamper with them. This is equivalent to sealing the ballot boxes.
+	The previous section outlined some useful ideas  for deploying election committees (scrutineers) within an e-democracy. The candidates and/or scrutineers all encrypt the raw vote file(s) when the election is closed, thus satisfying themselves, that nobody else can tamper with them. This is equivalent to sealing the ballot boxes.
 	  
-	  The counting itself and the results can now be verified by independent scrutineers, using their own software and working over the original sealed and encrypted files. 
+	  The counting itself and the results can now be verified by independent scrutineers, using their own software and working over the original sealed and encrypted files.  They have to agree on the results.
 	  
 	  One good thing about e-voting is that we can have plenty of recounts without any major inconvenience.
 	
