--- a/2020-06-10-crypt.md
+++ b/2020-06-10-crypt.md
@@ -35,9 +35,9 @@ We shall now discuss some more interesting applications.
 
 ### Collective Security
 
-It was A. Dumas and his musketeers who had the best idea about what a collective ought to be: "all for one and one for all". We apply his model where every individual counts to the world of modern encryption.
+It was A. Dumas and his musketeers who had the best idea about what a collective ought to be: "all for one and one for all". We apply his model, where every individual counts, to the world of modern encryption.
 
-In this regard XOR encryption has very useful property that it forms and abelian group, meaning that encryptions and decryptions with any number of different keys can be 'piled up' and the order of their application is immaterial to the result.
+In this regard XOR encryption has very useful property that it forms an abelian group, meaning that encryptions and decryptions with any number of different keys can be 'piled up' and the order of their application is immaterial to the result.
 
 Imagine a committee/group working on some super secret dossier. The problem is that  any member of the group might  leak it. 
 
@@ -57,7 +57,7 @@ In order for electronic voting to be acceptable, it must fulfil  these criteria:
 
 	Voters can be verified by the election authorities in the usual way. On production of their identity documents and proof of citizenship, the authorities will simply confirm the voter's email address in the system as 'authorised'. The 'black box' system then mails them their anonymised  'verified voter' access key (API token). This token gives their local voting application  rights to enter their vote into the online e-voting system (running on the server). 
 	
-	One problem remains if the officials themselves decide to create fictitious voters. However, discussing that would get us into deep issues of asymmetry of rights between the state and the individuals.
+	One problem remains, should the officials decide to create fictitious voters. However, discussing that would get us into deep issues of asymmetry of rights between the state and the individuals and it is perhaps better addressed another time.
 	
 1. Anonymity of voters: nobody else can connect a particular vote with a particular voter.
 
