--- a/2020-06-10-crypt.md
+++ b/2020-06-10-crypt.md
@@ -37,17 +37,17 @@ We shall now discuss some more interesting applications.
 
 It was A. Dumas and his musketeers who had the best idea about what a collective ought to be: "all for one and one for all". We apply his model, where every individual counts, to the world of modern encryption.
 
-In this regard XOR encryption has very useful property that it forms an abelian group, meaning that encryptions and decryptions with any number of different keys can be 'piled up' and the order of their application is immaterial to the result.
+In this regard XOR encryption has another useful property that it forms an abelian group, meaning that encryptions and decryptions with any number of different keys can be 'piled up' and the order of their application is immaterial to the result.
 
 Imagine a committee/group working on some super secret dossier. The problem is that  any member of the group might  leak it. 
 
 However, if every member cumulatively encrypts the dossier  with his own secret key (and all the intermediate copies are deleted), then nobody has access until they have all decrypted it back again with their individual original keys. Every single member of the group is secure in the knowledge that nobody, not even all the rest of them, can leak it without his knowledge and permission. 
 
-Similar thing can be done with the public asymmetric keys but XOR is much simpler to use. Each member needs only one key. We should thrive not to complicate things too much.
+A similar thing can be done with the public asymmetric keys but XOR is much simpler to use. Each member needs only one key. We should strive not to complicate things too much.
   
 Now, suppose that a group needs to collectively issue some command or authorisation. Obviously, no individual member can have prior knowledge of the form of the (secret) authorisation command, else such a member could issue it alone.  So the command has to be an encrypted secret which can only ever be revealed by being decrypted collectively, by all the individual members' agreement, as above.  
   
-There is an additional requirement now. The members must  never see the command at all, before it is actually issued. This can be accomplished by X-oring all their individual keys together in advance and encrypting the secret with the resulting super key. Of course, it is necessary to delete the merged super key immediately after its use.
+This is an additional requirement: the members must  never see the command at all, before it is actually issued. This can be accomplished by X-oring all their individual keys together in advance and encrypting the secret with the resulting super key. Of course, it is necessary to delete the merged super key immediately after its use.
 
 ### E-Democracy
 
@@ -55,7 +55,7 @@ In order for electronic voting to be acceptable, it must fulfil  these criteria:
 
 1. Verifiability of voters: only those entitled to vote can vote. 
 
-	Voters can be verified by the election authorities in the usual way. On production of their identity documents and proof of citizenship, the authorities will simply confirm the voter's email address in the system as 'authorised'. The 'black box' system then mails them their anonymised  'verified voter' access key (API token). This token gives their local voting application  rights to enter their vote into the online e-voting system (running on the server). 
+	Voters can be verified by the election authorities in the usual way. On production of their identity documents and proof of citizenship, the authorities will simply confirm the voter's email address in the system as 'authorised'. The 'black box' system then generates and mails them their anonymised  'verified voter' access key (API token). This token gives their local voting application  rights to enter their vote into the online e-voting system (running on the server). 
 	
 	One problem remains, should the officials decide to create fictitious voters. However, discussing that would get us into deep issues of asymmetry of rights between the state and the individuals and it is perhaps better addressed another time.
 	
@@ -65,17 +65,17 @@ In order for electronic voting to be acceptable, it must fulfil  these criteria:
 
 1. Verifiability of the vote: the voter must be able to check that the vote is recorded as entered and as intended and change it if necessary.
 
-	The voter then generates his own 'voting' key on his own device, encrypts his vote with it and enters it into the online system. Using his access key and the voting key again, he can subsequently verify his own vote. He can change his vote by repeating the voting process.  This will all be handled transparently by a simple to use local app. It is important that the app does not send the voting encryption key anywhere but uses it only locally at this stage.
+	The voter then generates his own 'voting' key on his own device, encrypts his vote with it and enters it into the online system. Using his access key and the voting key again, he can subsequently verify his own vote. He can even change his vote by repeating the voting process (before the election is closed).  This will all be handled transparently by a simple to use local app. It is important that the app does not send the voting encryption key anywhere but uses it only locally at this stage.
 	
 1. Security: nobody should be able to 'hack the system'. 
 
 	The votes remain on the server in their encrypted form until the voting deadline expires. At this stage the server switches to locked mode. The file(s) with the votes are collectively encrypted, protected 'read-only', and backed up. 
 	
-	Of course, as always, the vulnerability to an 'evil' programmer or administrator remains.  To this end all the system software must be open source. 
+	Of course, as always, there remains a vulnerability to an 'evil' programmer or administrator.  To this end all the system software must be open source. 
 	
-	The server then requests that the voters forward their latest voting keys, it looks up their votes by their access keys and decrypts and counts the votes.  Their decryption keys can be sent now because the files are locked and can no longer be changed in any way. 
+	The server then requests that the voters forward their latest voting keys. It looks up their votes by their access keys and decrypts and counts the votes.  The decryption keys can be sent now because the files are locked and can no longer be changed in any way. 
 	
-	If any unauthorised changing of votes took place prior to that, it will be picked up because the decryption with the original true key will no longer work. It is now acting as an  e-signature.
+	If any unauthorised changing of votes took place prior to that, it will be picked up because the decryption with the original true key will no longer work. It is now acting as an e-signature.
 	
 1. The counting of votes must be repeatable by independent scrutineers.
 
