--- a/2020-06-10-crypt.md
+++ b/2020-06-10-crypt.md
@@ -85,7 +85,9 @@ In order for electronic voting to be acceptable, it must fulfil  these criteria:
 	  
 	  One good thing about e-voting is that we can have plenty of recounts without any major inconvenience.
 	
-	
+### Conclusion
+
+Starting with a simple encryption, efficiently implemented, we have built up to a full blown model proposal for e-democracy. Any comments are welcome!
 
 
 
